examples/type_system/failing/48_main_invalid_return_type.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E412: main must return Unit (or omit return type).

fn main() -> Int {
    1
}
